--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=Fraunces:opsz@9..144&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="icon"
@@ -13,11 +17,11 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Frontend Mentor | I want to see if this works</title>
+    <title>Frontend Mentor | Sunnyside Agency Landing Page</title>
   </head>
   <body>
-    About Services Projects Contact We are creatives Transform your brand We are
-    a full-service creative agency specializing in helping brands grow fast.
+    <!--About Services Projects Contact We are creatives Transform your brand We
+    are a full-service creative agency specializing in helping brands grow fast.
     Engage your clients through compelling visuals that do most of the marketing
     for you. Learn more Stand out to the right audience Using a collaborative
     formula of designers, researchers, photographers, videographers, and
@@ -32,7 +36,7 @@
     satisfying and enjoyable experience. Thomas S. Chief Operating Officer
     Incredible end result! Our sales increased over 400% when we worked with
     Sunnyside. Highly recommended! Jennie F. Business Owner About Services
-    Projects Contact
+    Projects Contact -->
 
     <div class="attribution">
       Challenge by
