added top image and navigation bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
     <title>Frontend Mentor | Sunnyside Agency Landing Page</title>
   </head>
   <body>
-    <!--About Services Projects Contact We are creatives Transform your brand We
+    <div class="top-image">
+      <nav class="navbar">
+        <img src="images/logo.svg" class="logo" />
+        <ul class="menu-items">
+          <li class="menu-1">About</li>
+          <li class="menu-2">Services</li>
+          <li class="menu-3">Projects</li>
+          <li class="menu-4">Contact</li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- We are creatives Transform your brand We
     are a full-service creative agency specializing in helping brands grow fast.
     Engage your clients through compelling visuals that do most of the marketing
     for you. Learn more Stand out to the right audience Using a collaborative
