added heading and arrow

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow&family=Fraunces:opsz@9..144&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700;900&family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700;9..144,900&display=swap"
       rel="stylesheet"
     />
 
@@ -30,9 +30,13 @@
           <li class="menu-4">Contact</li>
         </ul>
       </nav>
+      <heading class="heading">
+        <h1 class="heading-text">We are creatives</h1>
+        <img src="images/icon-arrow-down.svg" class="down-arrow" />
+      </heading>
     </div>
 
-    <!-- We are creatives Transform your brand We
+    <!-- Transform your brand We
     are a full-service creative agency specializing in helping brands grow fast.
     Engage your clients through compelling visuals that do most of the marketing
     for you. Learn more Stand out to the right audience Using a collaborative
