--- a/index.html
+++ b/index.html
@@ -35,11 +35,25 @@
         <img src="images/icon-arrow-down.svg" class="down-arrow" />
       </heading>
     </div>
+    <div class="egg-block">
+      <div class="egg-block-text">
+        <h3>
+          Transform your <br />
+          brand
+        </h3>
+        <p class="detail-para">
+          We are a full-service creative agency specializing in<br />
+          helping brands grow fast. Engage your clients through<br />
+          compelling visuals that do most of the marketing for you.
+        </p>
+        <h5>Learn more</h5>
+      </div>
+      <div class="egg-block-img">
+        <img src="images/desktop/image-transform.jpg" class="transform-img" />
+      </div>
+    </div>
 
-    <!-- Transform your brand We
-    are a full-service creative agency specializing in helping brands grow fast.
-    Engage your clients through compelling visuals that do most of the marketing
-    for you. Learn more Stand out to the right audience Using a collaborative
+    <!--    Stand out to the right audience Using a collaborative
     formula of designers, researchers, photographers, videographers, and
     copywriters, we’ll build and extend your brand in digital places. Learn more
     Graphic design Great design makes you memorable. We deliver artwork that
