--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <img src="images/icon-arrow-down.svg" class="down-arrow" />
       </heading>
     </div>
-    <div class="egg-block">
-      <div class="egg-block-text">
+    <article class="main-content">
+      <div class="transform-txt">
         <h3>
           Transform your <br />
           brand
@@ -48,14 +48,31 @@
         </p>
         <h5>Learn more</h5>
       </div>
-      <div class="egg-block-img">
-        <img src="images/desktop/image-transform.jpg" class="transform-img" />
+      <div class="transform-img">
+        <img src="images/desktop/image-transform.jpg" />
       </div>
-    </div>
+      <div class="pink-img">
+        <img src="images/desktop/image-stand-out.jpg" />
+      </div>
+      <div class="stand-out-txt">
+        <h3>
+          Stand out to the right<br />
+          audience
+        </h3>
+        <p class="detail-para">
+          Using a collaborative formula of designers, researchers,<br />
+          photographers, videographers, and copywriters, we’ll<br />
+          build and extend your brand in digital places.
+        </p>
+      </div>
+    </article>
+    <!-- 
+    <div class="stand-out-block">
+      
+      
+    </div> -->
 
-    <!--    Stand out to the right audience Using a collaborative
-    formula of designers, researchers, photographers, videographers, and
-    copywriters, we’ll build and extend your brand in digital places. Learn more
+    <!--  Learn more
     Graphic design Great design makes you memorable. We deliver artwork that
     underscores your brand message and captures potential clients’ attention.
     Photography Increase your credibility by getting the most stunning,
