transform block done

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
     </div>
     <article class="main-content">
       <div class="transform-txt">
-        <h3>
+        <h3 class="trans-heading">
           Transform your <br />
           brand
         </h3>
-        <p class="detail-para">
+        <p class="detail-para trans-para">
           We are a full-service creative agency specializing in<br />
           helping brands grow fast. Engage your clients through<br />
           compelling visuals that do most of the marketing for you.
         </p>
-        <h5>Learn more</h5>
+        <h5 class="trans-learn">Learn more</h5>
       </div>
       <div class="transform-img">
         <img src="images/desktop/image-transform.jpg" />
       </div>
-      <div class="pink-img">
+      <div class="stand-out-img">
         <img src="images/desktop/image-stand-out.jpg" />
       </div>
       <div class="stand-out-txt">
@@ -59,11 +59,34 @@
           Stand out to the right<br />
           audience
         </h3>
-        <p class="detail-para">
+        <p class="detail-para stand-para">
           Using a collaborative formula of designers, researchers,<br />
           photographers, videographers, and copywriters, we’ll<br />
           build and extend your brand in digital places.
         </p>
+        <h5>Learn more</h5>
+      </div>
+      <div class="cherry-img">
+        <img src="images/desktop/image-graphic-design.jpg" />
+        <div class="cherry-txt">
+          <h4>Graphic design</h4>
+          <p>
+            Great design makes you memorable. We deliver<br />
+            artwork that underscores your brand message<br />
+            and captures potential clients’ attention.
+          </p>
+        </div>
+      </div>
+      <div class="orange-img">
+        <img src="images/desktop/image-photography.jpg" />
+        <div class="orange-txt">
+          <h4>Photography</h4>
+          <p>
+            Increase your credibility by getting the most<br />
+            stunning, high-quality photos that improve your<br />
+            business image.
+          </p>
+        </div>
       </div>
     </article>
     <!-- 
@@ -72,11 +95,9 @@
       
     </div> -->
 
-    <!--  Learn more
-    Graphic design Great design makes you memorable. We deliver artwork that
-    underscores your brand message and captures potential clients’ attention.
-    Photography Increase your credibility by getting the most stunning,
-    high-quality photos that improve your business image. Client testimonials We
+    <!--  
+    
+    Client testimonials We
     put our trust in Sunnyside and they delivered, making sure our needs were
     met and deadlines were always hit. Emily R. Marketing Director Sunnyside’s
     enthusiasm coupled with their keen interest in our brand’s success made it a
